--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lekoala/data-grid-component"
+    "url": "https://github.com/lekoala/data-grid"
   },
   "keywords": [
     "web-component",
