--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "esbuild --bundle --minify --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=data-grid.min.js",
     "start": "npm run build -- --servedir=.",
-    "watch": "npm run build -- --watch"
+    "watch": "npm run build -- --watch",
+    "build-min": "npm run build && git add -A && git commit -m \"build min file\"",
+    "bump": "npm run build-min && npm version patch"
   },
   "repository": {
     "type": "git",
