--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@happy-dom/global-registrator": "^6.0.4",
     "ava": "^4.3.1",
-    "esbuild": "^0.14.54"
+    "esbuild": "^0.15.5"
   },
   "author": "LeKoala",
   "license": "MIT",
@@ -44,7 +44,6 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "postcss-cli": "^10.0.0",
-    "sass": "^1.54.4",
-    "tailwindcss": "^3.1.8"
+    "sass": "^1.54.4"
   }
 }
