--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "lib": ["es2017", "dom"],
     "allowJs": true,
     "checkJs": true,
     "noEmit": true,
-    "moduleResolution": "node",
-    "maxNodeModuleJsDepth": 5
-  }
+    "strict": false,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*.js"],
+  "exclude": ["node_modules", "./test/"]
 }
