Relocated the compiled and minified files to a new dist folder.

--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "main": "data-grid",
   "scripts": {
     "test": "ava",
-    "build": "esbuild --bundle --minify --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=data-grid.min.js",
+    "build-min": "esbuild --bundle --minify --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.min.js",
+    "build-dev": "esbuild --bundle --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.js",
+    "build": "npm run build-min && npm run build-dev",
     "start": "npm run build -- --servedir=.",
     "watch": "npm run build -- --watch",
-    "compile-css": "sass data-grid.scss:data-grid.min.css --style compressed",
+    "compile-css-min": "sass data-grid.scss:dist/data-grid.min.css --style compressed",
+    "compile-css-dev": "sass data-grid.scss dist/data-grid.css",
     "watch-css": "npm run compile-css -- --watch --poll",
-    "prefix-css": "postcss data-grid.min.css --replace --use autoprefixer",
-    "build-css": "npm run compile-css && npm run prefix-css",
-    "build-all": "npm run build && npm run build-css && git add -A && git commit -m \"build files\"",
+    "prefix-css-min": "postcss dist/data-grid.min.css --replace --use autoprefixer",
+    "prefix-css-dev": "postcss dist/data-grid.css --replace --use autoprefixer",
+    "build-css-min": "npm run compile-css-min && npm run prefix-css-min",
+    "build-css-dev": "npm run compile-css-dev && npm run prefix-css-dev",
+    "build-css": "npm run build-css-min && npm run build-css-dev",
     "build-all-locally": "npm run build && npm run build-css",
+    "build-all": "npm run build-all-locally && git add -A && git commit -m \"build files\"",
     "bump": "npm run build-all && npm version patch",
     "update-deps": "npx npm-check-updates -u",
     "jsdoc": "jsdoc -c jsdoc.conf.json -d ./jsdoc -r src/",
