--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "scripts": {
     "test": "ava",
     "build-min": "esbuild --bundle --minify --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.min.js",
-    "build-dev": "esbuild --bundle --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.js",
+    "build-dev": "esbuild --bundle --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.js --banner:js=\"/*** Data Grid Web component * https://github.com/lekoala/data-grid ***/\"",
     "build": "npm run build-min && npm run build-dev",
     "start": "npm run build-dev -- --servedir=.",
     "watch": "npm run build-dev -- --watch",
     "compile-css-min": "sass data-grid.scss:dist/data-grid.min.css --style compressed",
     "compile-css-dev": "sass data-grid.scss dist/data-grid.css",
-    "watch-css": "npm run compile-css -- --watch --poll",
+    "watch-css": "npm run compile-css-dev -- --watch --poll",
     "prefix-css-min": "postcss dist/data-grid.min.css --replace --use autoprefixer",
     "prefix-css-dev": "postcss dist/data-grid.css --replace --use autoprefixer",
     "build-css-min": "npm run compile-css-min && npm run prefix-css-min",
