--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "start": "npm run build-dev -- --servedir=.",
     "watch": "npm run build-dev -- --watch",
     "compile-css-min": "sass data-grid.scss:dist/data-grid.min.css --style compressed",
-    "compile-css-dev": "sass data-grid.scss dist/data-grid.css",
+    "compile-css-dev": "sass data-grid.scss dist/data-grid.css --embed-sources",
     "watch-css": "npm run compile-css-dev -- --watch --poll",
     "prefix-css-min": "postcss dist/data-grid.min.css --replace --use autoprefixer",
-    "prefix-css-dev": "postcss dist/data-grid.css --replace --use autoprefixer",
+    "prefix-css-dev": "postcss dist/data-grid.css --replace --use autoprefixer --map",
     "build-css-min": "npm run compile-css-min && npm run prefix-css-min",
     "build-css-dev": "npm run compile-css-dev && npm run prefix-css-dev",
     "build-css": "npm run build-css-min && npm run build-css-dev",
