--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@happy-dom/global-registrator": "^10.5.1",
     "ava": "^5.3.1",
-    "esbuild": "^0.18.14",
+    "esbuild": "*",
     "jsdoc": "^4.0.2",
     "jsdoc-plugin-intersection": "^1.0.4",
     "jsdoc-to-markdown": "^8.0.0",
