--- a/package.json
+++ b/package.json
@@ -43,20 +43,20 @@
     ]
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^10.5.1",
+    "@happy-dom/global-registrator": "^10.11.2",
     "ava": "^5.3.1",
     "esbuild": "*",
-    "jsdoc": "^4.0.2",
+    "jsdoc": "^4.0.3",
     "jsdoc-plugin-intersection": "^1.0.4",
-    "jsdoc-to-markdown": "^8.0.0",
+    "jsdoc-to-markdown": "^8.0.3",
     "jsdoc-tsimport-plugin": "^1.0.5"
   },
   "author": "LeKoala",
   "license": "MIT",
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.26",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.45",
     "postcss-cli": "^10.1.0",
-    "sass": "^1.63.6"
+    "sass": "1.77.6"
   }
 }
