--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@happy-dom/global-registrator": "^10.11.2",
     "ava": "^5.3.1",
-    "esbuild": "*",
+    "esbuild": "^0.23.1",
     "jsdoc": "^4.0.3",
     "jsdoc-plugin-intersection": "^1.0.4",
     "jsdoc-to-markdown": "^8.0.3",
