fix typo, add typedef, allow isNaN

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,9 @@
         "rules": {
             "recommended": true
         },
+        "ignore": [
+            "noGlobalIsNan"
+        ],
         "include": [
             "./src/*.js"
         ]
