--- a/biome.json
+++ b/biome.json
@@ -24,11 +24,11 @@
     "linter": {
         "enabled": true,
         "rules": {
-            "recommended": true
+            "recommended": true,
+            "suspicious": {
+                "noGlobalIsNan": "off"
+            }
         },
-        "ignore": [
-            "noGlobalIsNan"
-        ],
         "include": [
             "./src/*.js"
         ]
