--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     ]
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^10.11.2",
+    "@happy-dom/global-registrator": "^15.11.6",
     "ava": "^5.3.1",
-    "esbuild": "0.23.1",
+    "esbuild": "*",
     "jsdoc": "^4.0.3",
     "jsdoc-plugin-intersection": "^1.0.4",
     "jsdoc-to-markdown": "^8.0.3",
