--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "data-grid-component",
-  "version": "2.0.9",
+  "version": "2.0.10",
   "description": "Standalone data grid web component",
   "type": "module",
   "main": "data-grid",
   "scripts": {
     "test": "ava",
     "build-min": "esbuild --bundle --minify --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.min.js",
-    "build-dev": "esbuild --bundle --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.js --banner:js=\"/*** Data Grid Web component * https://github.com/lekoala/data-grid ***/\"",
+    "build-dev": "esbuild --bundle --loader:.css=text --loader:.html=text --sourcemap --format=esm data-grid.js --outfile=dist/data-grid.js --banner:js=\"/*** Data Grid Web Component v2.0.10 * https://github.com/lekoala/data-grid ***/\"",
     "build": "npm run build-min && npm run build-dev",
     "start": "npm run build-dev -- --servedir=.",
     "watch": "npm run build-dev -- --watch",
