--- a/package.json
+++ b/package.json
@@ -47,20 +47,20 @@
     ]
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^15.11.6",
-    "ava": "^5.3.1",
-    "esbuild": "*",
-    "jsdoc": "^4.0.3",
+    "@happy-dom/global-registrator": "^15.11.7",
+    "ava": "^6.2.0",
+    "esbuild": "^0.24.0",
+    "jsdoc": "^4.0.4",
     "jsdoc-plugin-intersection": "^1.0.4",
-    "jsdoc-to-markdown": "^8.0.3",
+    "jsdoc-to-markdown": "^9.1.1",
     "jsdoc-tsimport-plugin": "^1.0.5"
   },
   "author": "LeKoala",
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.45",
-    "postcss-cli": "^10.1.0",
-    "sass": "1.77.6"
+    "postcss": "^8.4.49",
+    "postcss-cli": "^11.0.0",
+    "sass": "^1.82.0"
   }
 }
