--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/lekoala/data-grid"
+    "url": "git+https://github.com/lekoala/data-grid.git"
   },
   "keywords": [
     "web-component",
